# Token-OS

./: .coderabbit-cli.yaml  .coderabbit.yaml  .editorconfig  .gitignore  .stylelintignore  AGENTS.md  CLAUDE.md  CLOSEOUT_CONTINUITY.md  HANDOFF-dirty-runtime-deploy.md  HANDOFF-gt-reader-filter.md  PROD_GATE_PROBE.md  STARTUP.md  THROWAWAY-guard-verify.md  Token-OS  VENV_ROLL_CALL.md  WIP-MERGE-PLAN.md  config.json  package-lock.json  package.json
cli-tools/: README.md  SUMMARY.md  directory-tags.yaml  pyproject.toml
cli-tools/Shell/: cleanup-logs.sh  cron-dashboard.sh  deploy-executor-fleet.sh  heartbeat-watchdog.sh  inbox-status.sh  process-gc-watchdog.sh  system-dashboard.sh  tokenapi-watchdog  vault-progress.sh
cli-tools/archive/: tmux-daemon-native-feature-archive.md
cli-tools/civic-invariant/: README.md  civic-invariant  civic-thread  com.civic.invariant.plist  reservist-activation-prompt.md  server.py
cli-tools/docs/: aspirant-dispatch.md  cross-device-agents.md  generic-token-api-durable-retry-outbox.md  imperium-env-logs-vaults.md  managed-stack-dispatch.md  pane-prompt-delivery.md  tmux-focus-guard.md
cli-tools/git-hooks/: post-push  pre-commit
cli-tools/guardsman-checks/: discord-routing.guardsman
cli-tools/launchd/: ai.openclaw.process-gc-watchdog.plist  ai.openclaw.tmuxctld.plist  ai.openclaw.tokenapi-watchdog.plist  ai.openclaw.tokenapi.plist  ai.tokenclaw.tmuxctld.plist
cli-tools/lib/: ORIGIN.md  agent-wrapper-common.sh  aspirant_create.py  base-staleness.sh  context_pressure_message.py  disk-preflight.sh  git-remote.sh  imperium_config.py  nas-path.sh  nas_grep.py  origin.sh  pane-id.sh  persona_behavior.py  plan-approver-launch.sh  runtime-dirty-shunt.sh  shell-aliases-bash.sh  shell-aliases-zsh.sh  shell-aliases.sh  shell-init.sh  tmux-guard-wrapper.sh  tmux-guard.sh  tmux-runtime-cleanup.sh  tmux-state.sh  tmux_client_lease.py  tmuxctld-timeouts.sh  tmuxctld_timeouts.py  worktree-park.sh  worktree-ports.sh  worktree-resolve.sh
cli-tools/migrations/: 20260618_persona_rank_reconcile.py  20260618_persona_rank_reconcile.sql
cli-tools/prompts/: aspirant-persona.md
cli-tools/scripts/: .smbdeleteAAA3dca5  .smbdeleteAAA8c7a7  agent-session-end-resume.sh  agent-wrapper.sh  check-wrapper-sole-caller.py  claude-wrapper.sh  codex-hook-bridge.sh  codex-wrapper.sh  persona-seat.sh  post-compact-recenter.sh  post-tool-format.sh  runtime-write-guard.sh  runtime-write-protect.sh
cli-tools/tests/: conftest.py  test-origin.sh  test-vault-dispatch.sh  test_agent_cmd_cli.py  test_agent_cmd_resolution.py  test_agent_cmd_resolve_verdict.sh  test_agent_session_end_resume.py  test_agent_wrapper_hook_retry.py  test_agent_wrappers.py  test_aspirant_create_cli.py  test_automated_pane_activity.py  test_brief_cli.py  test_claude_namespace_stays_dead.py  test_close_wrapper_contracts.py  test_coderabbit_ci_gate_advisory.sh  test_coderabbit_pr_gate.py  test_codex_hook_bridge.py  test_codex_hook_bridge_sessionstart_retry.sh  test_codex_hooks_install.py  test_command_boundary_additional_rules.py  test_command_boundary_guard_config.py  test_context_pressure_message.py  test_daily_build_attribution.py  test_db_query_config.py  test_discord_daemon_launchd.py  test_dispatch_cli.py  test_dispatch_liveness.py  test_dispatch_occupancy_sniff.py  test_dispatch_prompt_file_delivery.sh  test_dispatch_worktree.py  test_generic_hook_sessionstart.py  test_generic_token_api_durable_retry_outbox.py  test_insert_invocation.py  test_instance_name_cli.py  test_instances_clear_protected_singletons.py  test_long_hold_transport_timeouts.py  test_low_disk_preflight.sh  test_mac_reconnect_ladder.py  test_machine_identity_k12.py  test_macrodroid_import.py  (+126 more)
cli-tools/tmux/: mobile-shell-init.zsh  tmux-base.conf  tmux-portable-status.conf  warp-shell-init.zsh
tmuxctld/: pyproject.toml  validate_hook_echo.py
tmuxctld/launchd/: ai.tokenclaw.tmuxctld.plist
tmuxctld/tests/: test_daemon_pane_live_public_contract.py  test_ephemeral_channel_disabled.py  test_transport_overlay_and_drain.py
token-api/: AGENTS.md  DESIGN.md  alpharius_heartbeat.py  ask_service.py  backfill_instance_id_stamps.py  billable.py  context_governor.py  corax_watchtower.py  cron-jobs.json  cron_engine.py  custodes_checkin.py  custodes_heartbeat.py  custodes_state_policy.py  custodes_watchtower.py  dailynote_callout.py  db_connections.py  db_helpers.py  db_schema.py  discord_responder.py  enforce.py  enforcement_service.py  fleet_dispatch_poc.py  golden_throne_noop.py  human_render.py  import_session_documents.py  init_db.py  instance_lifecycle.py  instance_mutation.py  instance_registry.py  launchd_socket.py  main.py  morning_launcher.py  morning_session.py  morning_supervisor.py  nas_mount.py  notify.py  now_widget.py  pane_surface.py  personas.py  phone_service.py  (+26 more)
token-api/docs/: 2026-06-05-gt-harness-ux-report.md  dailynote-widgets.md  discord-voice-draft-routing.md  imperium-daily-note-writes.md  ops-authoritative-status-read-model.md  ops-cockpit-data-roadmap.md  ops-cockpit-frontend-design-brief.md  ops-cockpit-information-architecture.md  ops-cockpit-static-mockup-brief.md  ops-cockpit.md  scoped-enforcement-pause-proposal.md  stream-deck-tts.md  tts-execution-control-plane.md
token-api/routes/: __init__.py  ask.py  day_start.py  hooks.py  tts.py  voice.py
token-api/scripts/: smoke_tts_pause_queue.sh  token-satellite-refresh  validate-windows-ahk-startup-drift
token-api/systemd/: README.md  token-api.socket  token-api@.service
token-api/tests/: conftest.py  overnight-2026-03-02.guardsman  test_action_based_enforcement.py  test_administratum_state_log_recorder.py  test_adversarial_daily_note_writer_absence.py  test_all_instances_stopped_assertion.py  test_askq_ladder.py  test_aspirant_launch.py  test_assert_and_send_failopen.py  test_atomic_send_event_level_pause.py  test_attended_pane_queue_safety.py  test_automatic_imperium_daily_note_writes.py  test_brief_resolver_ambiguity.py  test_brief_rowless_singleton_routing.py  test_broad_nas_search_guard.py  test_cascade_atomic_pairing.py  test_cd_restart.py  (+144 more)
(+728 files in other folders)
