[project]
name = "cli-tools"
version = "1.0.0"
description = "Centralized CLI tools for ProcurementAgentAI projects"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "asyncpg>=0.29.0",
    "cloud-sql-python-connector[asyncpg]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
time-convert = "cli_tools.timezone.cli:main"
db-query = "cli_tools.db_query.cli:main"
db-migrate = "cli_tools.db_migrate.cli:main"
cloud-logs = "cli_tools.cloud_logs.cli:main"
followup = "cli_tools.followup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Initial blocking gate: fatal syntax/name errors only until baseline cleanup lands.
select = ["E9", "F63", "F7", "F82"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
strict_optional = false
exclude = ["tests/", "archive/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
