[project]
name = "cli-tools"
version = "1.0.0"
description = "Centralized CLI tools for ProcurementAgentAI projects"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "asyncpg>=0.29.0",
    "cloud-sql-python-connector[asyncpg]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
time-convert = "cli_tools.timezone.cli:main"
db-query = "cli_tools.db_query.cli:main"
db-migrate = "cli_tools.db_migrate.cli:main"
cloud-logs = "cli_tools.cloud_logs.cli:main"
followup = "cli_tools.followup.cli:main"
daily-build = "cli_tools.daily_build.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-length handled by formatter


[tool.ruff.lint.per-file-ignores]
"tests/test_tmuxctl_*.py" = ["E402"]
"tests/test_tmuxctld_*.py" = ["E402"]
"tests/test_insert_invocation.py" = ["E402"]
"tests/test_tmux_typing_guard_agent.py" = ["E402"]
"tests/test_dispatch_liveness.py" = ["E402"]
"tests/test_automated_pane_activity.py" = ["E402"]
"../tmuxctld/lib/tmuxctl/enums.py" = ["UP042"]
"../tmuxctld/lib/tmuxctl/focus.py" = ["UP042"]
"../tmuxctld/lib/tmuxctl/revert.py" = ["UP042"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = false
strict_optional = false
disable_error_code = ["import-untyped"]
exclude = ["tests/", "archive/"]

[[tool.mypy.overrides]]
module = ["tmuxctl.revert"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../tmuxctld/lib", "lib"]
addopts = "-n auto --dist loadfile"  # local default parallel; CI pins serial with -n0 (see workflows); `-n0` to debug
markers = [
    "bounty: 'bounty board' lane — speculative test for an UNBUILT vault feature. Non-blocking: auto-xfail'd by tests/bounty_board/conftest.py, excluded from the required regression run via `-m 'not bounty'`. An xpass means the feature shipped — graduate it into regression.",
]
