[project]
name = "token-api"
version = "0.1.0"
description = "Local FastAPI server for Claude instance management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "aiosqlite>=0.20.0",
    "rich>=13.9.0",
    "apscheduler[sqlalchemy]>=3.10.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]


[tool.ruff.lint.per-file-ignores]
"main.py" = ["B007", "B008", "B904", "E402", "E722", "F841"]
"token-satellite.py" = ["B007", "B904", "F841"]
"timer.py" = ["UP042"]
"billable.py" = ["UP042"]
"cron_engine.py" = ["B904"]
"custodes_checkin.py" = ["E741"]
"custodes_heartbeat.py" = ["F841"]
"post_run_graph.py" = ["F841"]
"routes/voice.py" = ["F841"]
"schedule.py" = ["B904", "F841"]
"stop_hook.py" = ["F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
strict_optional = false
ignore_errors = true
disable_error_code = ["import-untyped"]
